[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "blue-tanuki-core"
version = "0.0.2"
description = "Audit-first upstream control core for personal agents"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anyio>=4.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
speedups = [
    "aiosqlite>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
blue-tanuki = "blue_tanuki_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_tanuki_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/blue_tanuki_core/policy.default.yaml" = "blue_tanuki_core/policy.default.yaml"
